language/move-lang/tests/move_check/expansion/use_spec_function_as_normal_function.exp
error: 

   ┌── tests/move_check/expansion/use_spec_function_as_normal_function.move:4:16 ───
   │
 4 │         define foo(): bool { true }
   │                ^^^ Unexpected 'foo'
   ·
 4 │         define foo(): bool { true }
   │                --- Expected ':'
   │

